--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=survey
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=survey
+DB_PASSWORD=tFbb66&3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
